--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "berthutapea",
-  "name": "Davi Souza Costa | Portfolio",
+  "name": "Cristiano Silva | Portfolio",
   "icons": [
     {
       "src": "favicon.png",
